# satellite

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitleaks.toml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  build-deb.sh  build-installer.bat  build-satellite.bat  build-satellite.sh  build-tests.bat  build.bat  controller-receiver.cpp  controller-sender.cpp  install-dependencies.bat  installer.iss  osv-scanner.toml  satellite.manifest  satellite.rc  test_dsu_protocol  test_mdns_protocol  vcpkg.json
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _security.yml  codeql.yml  linux-ci.yml  macos-ci.yml  release.yml  security.yml  version-consistency.yml  windows-ci.yml  windows-msvc-ci.yml
.security/: allowlist.yaml
docs/: architecture.md  code-signing.md  connection-api.md  contract.md  protocol.md
lib/: VENDORED.md
lib/libsodium/libsodium-win32/lib/: libsodium.la
lib/libsodium/libsodium-win32/lib/pkgconfig/: libsodium.pc
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/debian/: 70-satellite-uinput.rules  copyright  postinst  postrm  satellite-modules.conf  satellite.desktop
packaging/repo/: README.md  build-apt-repo.sh  build-dnf-repo.sh  index.html
packaging/rpm/: postinst.sh  postuninst.sh
redist/: README.md  SHA256SUMS
scripts/: check_core_purity.sh  fetch-redist.ps1  generate-sbom.ps1  setup-hooks.sh  sign.ps1  windows-vs-generator.ps1
scripts/winget/: TinkerNorth.Satellite.installer.yaml  TinkerNorth.Satellite.locale.en-US.yaml  TinkerNorth.Satellite.yaml
src/: config.cpp  config.h  crypto.cpp  crypto.h  discovery.cpp  discovery.h  globals.cpp  globals.h  main.cpp  pairing.cpp  pairing.h  receiver.cpp  receiver.h  resource.h  tray.cpp  tray.h  vigem.cpp  vigem.h  webserver.cpp  webserver.h
src/adapters/: client_adapter.cpp  client_adapter.h  config_adapter.cpp  config_adapter.h  log_adapter.cpp  log_adapter.h  vigem_adapter.cpp  vigem_adapter.h
src/app/: app_state.h
src/core/: app_state.h  backend_registry.cpp  backend_registry.h  catalog.cpp  catalog.h  config_io.cpp  config_io.h  config_json.h  firewall_status.h  gamepad_backend.h  github_release.cpp  github_release.h  ipv4_util.h  json.h  json_mini.h  network_info.cpp  network_info.h  ports.h  semver.h  session_service.cpp  session_service.h  touchpad_codec.h  types.h  update_service.cpp  update_service.h  update_types.h  version.h  version_rc.h.in
src/net/: discovery.cpp  discovery.h  discovery_beacon.h  dsu_protocol.cpp  dsu_protocol.h  dsu_server.cpp  dsu_server.h  inner_dispatch.cpp  inner_dispatch.h  local_iface.cpp  local_iface.h  machine_id.cpp  machine_id.h  mdns_protocol.cpp  mdns_protocol.h  mdns_rejoin.h  mdns_responder.cpp  mdns_responder.h  net_compat.h  origin_guard.h  pairing.cpp  pairing.h  pairing_keys.cpp  pairing_keys.h  pairing_service.cpp  pairing_service.h  pin_rotation.cpp  pin_rotation.h  receiver.cpp  receiver.h  routes_admin.cpp  routes_admin.h  routes_client.cpp  routes_client.h  routes_common.cpp  routes_common.h  session_crypto.cpp  session_crypto.h  status_json.h  tls.cpp  (+3 more)
src/platform/linux/: config.cpp  config.h  crypto.cpp  crypto.h  gamepad_adapter.cpp  gamepad_adapter.h  gamepad_backend.cpp  globals.cpp  globals.h  main.cpp  netlink_rejoin.h  tray.cpp  tray.h  updater_adapter.cpp  updater_adapter.h  vigem.cpp  vigem.h
src/platform/macos/: config.cpp  config.h  crypto.cpp  crypto.h  ds4_report.h  gamepad_adapter.h  gamepad_backend.cpp  globals.cpp  globals.h  mac_hid_gamepad_adapter.cpp  mac_hid_gamepad_adapter.h  main.mm  tray.h  tray.mm  updater_adapter.h  updater_adapter.mm  vigem.h  vigem_stub.cpp
src/platform/posix/: config_posix.cpp  config_posix.h  crypto_posix.cpp
src/platform/windows/: app_lifecycle.cpp  app_lifecycle.h  config.cpp  config.h  crypto.cpp  crypto.h  gamepad_backend.cpp  globals.cpp  globals.h  hidmaestro_provisioner.h  hidmaestro_wire.cpp  hidmaestro_wire.h  main.cpp  resource.h  shell_integration.cpp  shell_integration.h  toast.cpp  toast.h  tray.cpp  tray.h  updater_adapter.cpp  updater_adapter.h  vigem.cpp  vigem.h  vigem_adapter.cpp  vigem_adapter.h  vigem_submit_policy.h
tests/: test_backend_registry.cpp  test_catalog.cpp  test_codecs.cpp  test_config_json.cpp  test_discovery.cpp  test_dsu_protocol.cpp  test_firewall_status.cpp  test_github_release.cpp  test_hidmaestro_wire.cpp  test_ipv4_util.cpp  test_json.cpp  test_json_mini.cpp  test_linux_platform.cpp  test_mac_hid_smoke.cpp  test_machine_id.cpp  test_macos_ds4_report.cpp  test_macos_platform.cpp  test_mdns_protocol.cpp  test_mdns_rejoin.cpp  test_network_info.cpp  test_origin_guard.cpp  test_pairing.cpp  test_pin_rotation.cpp  test_receiver.cpp  test_routes_admin.cpp  test_routes_client.cpp  test_semver.cpp  test_session_crypto.cpp  test_session_service.cpp  test_status_json.cpp  test_uinput_smoke.cpp  test_update_service.cpp  test_util.h  test_vigem_adapter.cpp  test_windows_platform.cpp
tests/fuzz/: fuzz_receiver_dispatch.cpp
tools/: vigem_probe.cpp
vigem/include/ViGEm/: BusShared.h  Common.h
web/: app.js  common.js  dashboard.js  debug.js  donate.js  i18n.js  index.html  loaders.js  login.js  logs.js  settings.js  setup.js  style.css  updates.js
web/lang/: bs.json  de.json  en.json  es.json  fr.json  pt-BR.json
